--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,7 +56,7 @@ html{
 
 body, html {
 	height: 100%;
-	font-family: Poppins-Regular, sans-serif;
+	font-family: 'Times New Roman', Times, serif;
 }
 
 /*---------------------------------------------*/
