--- a/public/css/tabs1.css
+++ b/public/css/tabs1.css
@@ -23,11 +23,11 @@
 
 #tsum-tabs section {
     display: none;
-    padding: 20px 0 0;
+    padding: 10px 5 5;
     border-top: 1px solid #ddd;
 }
 
-#tsum-tabs input {
+#tsum-tabs .inputs {
     display: none;
 }
 
